# simple-midi-controller-scripts

./: README.md  common.py  device_forward_ccs.py  device_forward_ccs_all.py  device_forward_pedals.py  pyproject.toml
src/: common.py  device_forward_pedals.py
